syntax = "proto3";

package node.logging;

option go_package = "github.com/rancher/opni/plugins/logging/apis/node";

service NodeLoggingCapability {
  rpc Sync(SyncRequest) returns (SyncResponse);
}

message LoggingCapabilityConfig {
  bool enabled = 1;
  // If enabled is false, conditions may contain a list of relevant status
  // messages describing why the capability is disabled.
  repeated string conditions = 2;
}

message SyncRequest {
  LoggingCapabilityConfig currentConfig = 1;
}

enum ConfigStatus {
  Unknown     = 0;
  UpToDate    = 1;
  NeedsUpdate = 2;
}

message SyncResponse {
  ConfigStatus            configStatus  = 1;
  LoggingCapabilityConfig updatedConfig = 2;
}
